Updated admin/base_site.html template to include jquery and its UI components on all admin pages.
git-svn-id: http://code.populousproject.com/svn/trunk@15 2d015e74-dcdc-4604-a43e-ef45d21546f3

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -3,7 +3,10 @@
 
 {% block title %}{{ title }} | {% trans 'Django site admin' %}{% endblock %}
 
-{% block extrahead %}<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.js"></script>{% endblock%}
+{% block extrahead %}
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui.js"></script>
+{% endblock%}
 
 {% block branding %}
 <h1 id="site-name">{% trans 'Populous administration' %}</h1>
