--- a/populous/admin/templates/admin/includes_grappelli/shortcuts.html
+++ b/populous/admin/templates/admin/includes_grappelli/shortcuts.html
@@ -1,5 +1,5 @@
 <ul>
-    <li>Grappelli</li>
+    <li>Populous</li>
     <li id="toggle_navigation"><a href="javascript://">Navigation</a>
         <ul id="navigation" class="menu">
             <li><a href="/admin/"><strong>Main Admin</strong></a></li>
