A bunch of updates to inlines.  This is very close to working...
git-svn-id: http://code.populousproject.com/svn/trunk@70 2d015e74-dcdc-4604-a43e-ef45d21546f3

--- a/populous/inlines/templates/inlines/textinline/default.html
+++ b/populous/inlines/templates/inlines/textinline/default.html
@@ -1,6 +1,8 @@
-<div class="{{ inline.data.class }} text-inline">
+<div class="{% block class %}{{ inline.data.class }} text-inline{% endblock %}" {% block div_attrs %}{% endblock %}>
+    {% block content %}
     {% if title %}
     <h3>{{ inline.data.title }}</h3>
     {% endif %}
     <p>{{ inline.data.content }}</p>
+    {% endblock %}
 </div>
